# GhostLayer

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: build.yml
include/: alerts.h  app_state.h  bridge.h  builder.h  dissectors.h  intruder.h  main_gui.h  pcap_loader.h  plugins.h  proto.h  style_ccs.h  version.h.in
scripts/: bridge.py  grbridge.grc  worker.py
src/: app_state.c  bridge.c  dissector.c  intruder.c  main.c  meson.build  pcap_files.c  proto.h  utilities.c
src/backend/: backend.h  meson.build  sdr-gnuradio.c  sdr-gnuradio.h
src/builder/: bgenerators.c  btemplates.c  builder.c
src/core/: core.c  core.h  meson.build  packet.c  packet.h
src/dissectors/: dissector.c  dissector.h  meson.build  raw.c  spp.c
src/dissectors/protocols/: meson.build  protocols.h  raw.c  spp.c
src/gui/: about_dialog.c  alerts.c  fuzzer_table.c  iface_dialog.c  intruder_dialog.c  main_gui.c  packet_hexdump.c  packet_sender_dialog.c  packet_tree.c  packet_viewer.c  statusbar.c  toolbar.c  widget_payload_list.c
src/plugins/: plugin_radio.c  plugin_spp_crafter.c
src/ui/: meson.build  ui-manager.c  ui-manager.h
src/ui/components/: main-layout.c  main-layout.h  meson.build  table.c  table.h  toolbar.c  toolbar.h  tree-view.c  tree-view.h
tests/: tcp_client.py
